# ozz

./: .gitignore  .gitmodules  README.md
docs/: README.md  instrumentaion.md  patches.txt  qcsched.md  razzerv2_idea.md
docs/razzerv2/: exp.md  idea.md
exp/: .gitignore  README  scripts
exp/report/: .gitignore  all_bugs  log2  report0
exp/units/: Makefile  test.h  test_mp.c  test_pso.c  test_sb.c
exp/x86_64/: syzkaller.cfg.template
gotools/: .gitignore
kernels/guest/: .gitignore  COMMIT  instrument.lst  scripts
kernels/host/: README
scripts/: envsetup.sh  functions.sh  install.sh
scripts/buildroot/: _envsetup.sh  _install.sh  config
scripts/capstone/: _install.sh
scripts/cmake/: _envsetup.sh  _install.sh
scripts/dwarves/: _envsetup.sh  _install.sh
scripts/exp/: archive_crashes.py  collect_patches.py  get_syzkaller_corpus.py  grab_crash_titles.py  hash.py  inspect_flushvector.py  inspect_log.py  run_fuzzer.sh  scrap_crash.py
scripts/gcc/: _envsetup.sh  _install.sh
scripts/gdb/: _envsetup.sh  _install.sh  attach_gdb.sh
scripts/go/: _envsetup.sh  _install.sh
scripts/linux/: __check_branch.sh  __check_suffix.sh  __create_symlinks.sh  _envsetup.sh  build.sh  build_setup.sh  create-image-arm64.sh  create-image-x86_64.sh  instrumentation_selector.py  modify_makefiles.py  select_arch.sh
scripts/llvm/: _envsetup.sh  _install.sh
scripts/meson/: _envsetup.sh  _install.sh
scripts/misc/: _envsetup.sh  addr2line.py
scripts/ninja/: _install.sh
scripts/orig_qemu/: _envsetup.sh  _install.sh
scripts/python/: _envsetup.sh  _install.sh  requirements.txt
scripts/qemu/: _envsetup.sh  _install.sh  attach_gdb.sh  run_qemu.sh  run_qemu_aarch64.sh  run_qemu_x86_64.sh  upload.sh
scripts/syzkaller/: _envsetup.sh  (+1 more)
tools/: syzkaller
tools/SoftStoreBufferPass/lib/: CMakeLists.txt  SSBPass.cpp
tools/SoftStoreBufferPass/runtime/: CMakeLists.txt  PSOCallbacks.cpp  TSOCallbacks.cpp
tools/benchmarks/arm-barrier-simple/: CMakeLists.txt  arm-barrier-simple.c
tools/qemu/qcsched/: blocker.c  breakpoint.c  exec_control.c  hcall.c  kssb.c  meson.build  qcsched.c  suspend.c  timer.c  trampoline.c  vmi.c  window.c
tools/qemu/qcsched/test/: Makefile  cve-2019-6974.c  hcall_constant.h  test.c
tools/qemu/qcsched/test/schedpoint/: bypass-1.h  bypass-2.h  cve-2019-6974-1.h  cve-2019-6974-2.h  cve-2019-6974-minimal-1.h  cve-2019-6974-minimal-2.h  simple-1.h  simple-2.h
(+680 files in other folders)
